Create Admin with user

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
         "@types/node": "^22.15.30",
@@ -16,6 +17,8 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "@prisma/client": "6.9.0",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "express": "^5.1.0"
     }
