--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@prisma/client": "6.9.0",
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "http-status": "^2.1.0"
     }
 }
