--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "express": "^5.1.0",
-        "http-status": "^2.1.0"
+        "http-status": "^2.1.0",
+        "zod": "^3.25.61"
     }
 }
