--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.9",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.30",
         "prisma": "^6.9.0",
         "ts-node-dev": "^2.0.0",
@@ -19,9 +21,12 @@
     "dependencies": {
         "@prisma/client": "6.9.0",
         "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "http-status": "^2.1.0",
+        "jsonwebtoken": "^9.0.2",
         "zod": "^3.25.61"
     }
 }
