--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.30",
+        "@types/nodemailer": "^6.4.17",
         "prisma": "^6.9.0",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.4",
@@ -27,6 +28,7 @@
         "express": "^5.1.0",
         "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^7.0.3",
         "zod": "^3.25.61"
     }
 }
