--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
+        "@types/lodash": "^4.17.17",
         "@types/multer": "^1.4.13",
         "@types/node": "^22.15.30",
         "@types/nodemailer": "^6.4.17",
@@ -30,6 +31,7 @@
         "express": "^5.1.0",
         "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.2",
+        "lodash": "^4.17.21",
         "multer": "^2.0.1",
         "nodemailer": "^7.0.3",
         "zod": "^3.25.61"
